--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 Body {
     margin: 0;
     padding-top: 800px;
-    text-align: center;
+
 }
 
 .profile {
@@ -21,12 +21,12 @@ Body {
     display: table;
     width: 100%;
     height: 100%;
+    z-index: 9;
 }
 
 h1 {
     font-size: 40px;
-    line-height: 1.2;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Denk One', sans-serif;
     font-weight: 300;
 
 }
@@ -34,7 +34,7 @@ h1 {
 #name {
     font-size: 30px;
     line-height: 1.2;
-    font-family: cursive;
+    font-family: 'Cinzel Decorative', cursive;
 
 
 }
@@ -42,7 +42,10 @@ h1 {
 h2 {
     font-size: 30px;
     line-height: 1.2;
-    font-family: monospace;
+    font-family: 'Denk One', sans-serif;
+    font-weight: 300;
+
+
 
 }
 
@@ -57,13 +60,15 @@ h2 {
     height: 6px;
     background-color: #000;
     width: 70px;
-    margin: 80px auto;
+    margin: 8px auto;
 }
 
 p {
     margin: 25px auto;
-    font-size: 17px;
+    font-size: 25px;
     line-height: 1.3;
+    font-family: 'Lobster', cursive;
+    max-width: 450px;
 
 }
 
@@ -73,4 +78,32 @@ p {
     text-align: center;
     vertical-align: middle;
 
+}
+
+.menu {
+    list-style: none;
+    font-family: sans-serif;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.links {
+    float: left;
+    color: #FFF;
+    padding-right: 9px;
+    padding-left: 9px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-family: 'Goblin One', cursive;
+    font-size: 15px;
+
+
+
+}
+
+.links:hover {
+    background: linear-gradient(#fc5603 0%, #fffb00 100%);
 }
